--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,10 @@
 /* map */
 @import 'mapbox-gl/dist/mapbox-gl.css';
 
+/* carousel */
+@import 'slick-carousel/slick/slick.css';
+@import 'slick-carousel/slick/slick-theme.css';
+
 /* lightbox */
 @import 'yet-another-react-lightbox/styles.css';
 @import 'yet-another-react-lightbox/plugins/captions.css';
